# matrix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yaml
tests/: CMakeLists.txt
